chore: update author attribution and remove internal docs
ATTRIBUTION:
- Update LICENSE copyright to Simon Auer
- Add maintainer field to pubspec.yaml
- Add author section to README.md
- Update website footer with correct name

CLEANUP:
- Remove internal planning documents from git tracking
  - example/IMPLEMENTATION_COMPLETE.md
  - example/EXAMPLES_PROGRESS.md
  - website/LAUNCH_CHECKLIST.md
  - website/IMPLEMENTATION_SUMMARY.md
- Add internal docs to .gitignore

These files remain available locally for development reference.

--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
   <meta name="title" content="Fluvie - Programmatic Video Generation for Flutter">
   <meta name="description" content="Create videos programmatically with Flutter. Declarative video composition using familiar widgets. Frame-perfect rendering with FFmpeg encoding.">
   <meta name="keywords" content="flutter, video, ffmpeg, animation, programmatic video, remotion, video generation, dart, widgets, rendering">
-  <meta name="author" content="Simone Rich">
+  <meta name="author" content="Simon Auer">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -56,7 +56,7 @@
     },
     "creator": {
       "@type": "Person",
-      "name": "Simone Rich"
+      "name": "Simon Auer"
     },
     "url": "https://fluvie.dev",
     "softwareVersion": "0.1.0",
@@ -662,7 +662,7 @@ print('Video saved: $output');</code></pre>
 
         <div class="community-footer">
           <p>Built with ❤️ for the Flutter community</p>
-          <p class="license">MIT License © 2024-2025 Simone Rich</p>
+          <p class="license">MIT License © 2024-2025 Simon Auer</p>
         </div>
       </div>
     </section>
@@ -703,7 +703,7 @@ print('Video saved: $output');</code></pre>
       </div>
 
       <div class="footer__bottom">
-        <p>&copy; 2024-2025 Simone Rich. All rights reserved.</p>
+        <p>&copy; 2024-2025 Simon Auer. All rights reserved.</p>
         <p>Fluvie is an open source project licensed under the MIT License.</p>
       </div>
     </div>
